--- a/port/index4.html
+++ b/port/index4.html
@@ -75,10 +75,10 @@
 
         <section id="section1">
             <div class="sec1 left-section">
-                <div class="sec1-title left-title">
-                <!-- <div class="sec1-title left-title"
-                    data-750="left: 7.604vw;"
-                    data-1400="left: -5.604vw;"> -->
+                <!-- <div class="sec1-title left-title"> -->
+                <div class="sec1-title left-title"
+                    data-750="left: 4.604vw;"
+                    data-1400="left: -5.604vw;">
                     <h2 class="ftitle">webstandard</h2>
                     <h2 class="btitle">webstandard</h2>
                 </div>
@@ -89,31 +89,34 @@
                             data-2300="left: 120px; transform: scale3d(1.24998,1.24998,1);"></div>
                     </div>
                 </div>
+                <!-- <div class="sec1-num-wrap left-num-wrap"> -->
                 <div class="sec1-num-wrap left-num-wrap"
                     data-800="top: 18vw;"
                     data-2000="top: 30vw;">
                     <div class="sec1-num left-num">01</div>
                 </div>
+                <!-- <div class="sec1-desc-wrap left-desc-wrap"> -->
                 <div class="sec1-desc-wrap left-desc-wrap"
                     data-1100="top: 36vw"
                     data-2300="top: 15vw">
-                    <div class="sec1-desc left-desc">
-                        <ul>
-                            <li class="desc-title">WEBSTANDARD</li>
-                            <li class="desc-desc">
-                                웹 페이지의 기본적인 레이아웃을 바탕으로 웹 접근성을 
-                                위해 스크린 리더기를 고려한 탭 메뉴와 탭 이동을 구성하였고, 
-                                슬릭을 이용해 이미지가 자동으로 움직이는 효과를 주었습니다. 
-                                또한 동작 버튼을 추가하여 이미지의 동작 상태를 조절 할 수 있게 
-                                하였습니다. 마지막으로 라이트박스 플러그인을 사용하여 이미지에 
-                                팝업 기능도 추가하였습니다.
-                            </li>
-                        </ul>
+                    <!-- <div class="sec1-desc-wrap left-desc-wrap"
+                        data-1100="top: 69%"
+                        data-2300="top: 30%"> -->
+                        <h2 class="desc-title">webstandard</h2>
+                        <p class="desc-desc">
+                            웹 페이지의 기본적인 레이아웃을 바탕으로 웹 접근성을 
+                            위해 스크린 리더기를 고려한 탭 메뉴와 탭 이동을 구성하였고, 
+                            슬릭을 이용해 이미지가 자동으로 움직이는 효과를 주었습니다. 
+                            또한 동작 버튼을 추가하여 이미지의 동작 상태를 조절 할 수 있게 
+                            하였습니다. 마지막으로 라이트박스 플러그인을 사용하여 이미지에 
+                            팝업 기능도 추가하였습니다.
+                        </p>
+                        <div class="btn-wrap">
+                            <a class="link leftBtn blank" href="#"><span>view site</span></a>
+                            <a class="link rightBtn" href="#"><span>view figma</span></a>
+                        </div>
                     </div>
-                    <div class="btn-wrap">
-                        <a class="link leftBtn blank" href="#"><span>view site</span></a>
-                        <a class="link rightBtn" href="#"><span>view figma</span></a>
-                    </div>
+                    
                 </div>
                 
                 <div class="container codecontainer">
