--- a/port/index4.html
+++ b/port/index4.html
@@ -89,10 +89,10 @@
                             data-2300="left: 120px; transform: scale3d(1.24998,1.24998,1);"></div>
                     </div>
                 </div>
-                <!-- <div class="sec1-num-wrap left-num-wrap"> -->
-                <div class="sec1-num-wrap left-num-wrap"
+                <div class="sec1-num-wrap left-num-wrap">
+                <!-- <div class="sec1-num-wrap left-num-wrap"
                     data-800="top: 18vw;"
-                    data-2000="top: 30vw;">
+                    data-2000="top: 30vw;"> -->
                     <div class="sec1-num left-num">01</div>
                 </div>
                 <!-- <div class="sec1-desc-wrap left-desc-wrap"> -->
