--- a/port/index4.html
+++ b/port/index4.html
@@ -223,6 +223,16 @@
     <script src="js/prism.js"></script>
     <script src="js/skrollr.min.js"></script>
     <script src="js/custom2.js"></script>
+    <script>
+        TextColor();
+        var s = skrollr.init();
+
+        // $(window).on('resize', function () {
+        //     if ($(window).width() <= 800) {
+        //         skrollr.init().destroy(); // skrollr.init() returns the singleton created above
+        //     }
+        // });
+    </script>
 
    
     <!-- <script>
