--- a/port/index4.html
+++ b/port/index4.html
@@ -227,11 +227,11 @@
         TextColor();
         var s = skrollr.init();
 
-        // $(window).on('resize', function () {
-        //     if ($(window).width() <= 800) {
-        //         skrollr.init().destroy(); // skrollr.init() returns the singleton created above
-        //     }
-        // });
+        $(window).on('resize', function () {
+            if ($(window).width() <= 800) {
+                skrollr.init().destroy(); // skrollr.init() returns the singleton created above
+            }
+        });
     </script>
 
    
