--- a/port/index4.html
+++ b/port/index4.html
@@ -47,30 +47,6 @@
         </header>
         <!-- //header -->
 
-        <!-- <div id="big-title">
-            <div class="big-title">
-                <svg> 
-                    <text text-anchor="middle" 
-                    alignment-baseline="middle" 
-                    transform="translate(250, 150)">
-                        site
-                    </text>
-                </svg>
-            </div>
-            <div class="box-wrap">
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-            </div>
-        </div> -->
-        <!-- //big-title -->
-
         <section id="section1">
             <div class="sec1 left-section">
                 <div class="sec1-title left-title">
@@ -85,7 +61,7 @@
                 <div class="sec1-num-wrap left-num-wrap move3">
                     <div class="sec1-num left-num">01</div>
                 </div>
-                <div class="sec1-desc-wrap left-desc-wrap move4">
+                <div class="sec1-desc-wrap left-desc-wrap reveal-ltr move4">
                     <h2 class="desc-title">webstandard</h2>
                     <p class="desc-desc">
                         웹 페이지의 기본적인 레이아웃을 바탕으로 웹 접근성을 
