--- a/port/index5.html
+++ b/port/index5.html
@@ -1,47 +1,21 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .img-wrap {
-            margin-top: 300px;
-            width: 1200px;
-            height: 800px;
-            position: relative;
-        }
-        img {
-            width: 100%;
-        }
-        /* .img-wrap::before {
-            content: '';
-            width: 100%;
-            height: 100%;
-            position: absolute; top: 0; left: 0;
-            background: rgba(0, 128, 0, 0.548);
-        } */
-        .title-wrap h2 {
-            font-size: 120px;
-            text-transform: uppercase;
-            position: absolute; top: 100px; left: 100px;
-        }
-        .front {
-            -webkit-text-stroke: 2px red;
-            -webkit-text-fill-color: transparent;
-        }
-        .back {
-            z-index: -1;
-        }
-    </style>
 </head>
 <body>
-    <div class="img-wrap">
-        <img src="img/webstandard_silver_gray.jpg" alt="">
-    </div>
-    <div class="title-wrap">
-        <h2 class="front">webstandard</h2>
-        <h2 class="back">webstandard</h2>
-    </div>
+
+
+
+
+
+
+
+
+
+
+        
 </body>
 </html>
