--- a/port/index5.html
+++ b/port/index5.html
@@ -49,13 +49,13 @@
 
         <section id="section1"> 
             <div class="site-wrap">
-                <h2 class="site-title ftitle move1"><span>webstandard</span></h2>
+                <h2 class="site-title ftitle t-moveLTR"><span>webstandard</span></h2>
                 <div class="img-align-box">
                     <div class="img-wrap reveal-ltr">
                         <div class="imgframe"></div>
                     </div>
                 </div>
-                <h2 class="site-title btitle move1"><span>webstandard</span></h2>
+                <h2 class="site-title btitle t-moveLTR"><span>webstandard</span></h2>
                 <div class="site-num move3">01</div>
                 <div class="site-desc-wrap move4">
                     <h2 class="desc-title">webstandard</h2>
@@ -164,23 +164,23 @@
 
         <section id="section2"> 
             <div class="site-wrap">
-                <h2 class="site-title ftitle"><span>responsive</span></h2>
+                <h2 class="site-title ftitle t-moveRTL"><span>responsive</span></h2>
                 <div class="img-align-box">
                     <div class="img-wrap reveal-rtl">
                         <div class="imgframe"></div>
                     </div>
                 </div>
-                <h2 class="site-title btitle"><span>responsive</span></h2>
+                <h2 class="site-title btitle t-moveRTL"><span>responsive</span></h2>
                 <div class="site-num move3">02</div>
                 <div class="site-desc-wrap">
                     <h2 class="desc-title">responsive</h2>
                     <p class="desc-desc">
-                        웹 페이지의 기본적인 레이아웃을 바탕으로 웹 접근성을 
-                        위해 스크린 리더기를 고려한 탭 메뉴와 탭 이동을 구성하였고, 
-                        슬릭을 이용해 이미지가 자동으로 움직이는 효과를 주었습니다. 
-                        또한 동작 버튼을 추가하여 이미지의 동작 상태를 조절 할 수 있게 
-                        하였습니다. 마지막으로 라이트박스 플러그인을 사용하여 이미지에 
-                        팝업 기능도 추가하였습니다.
+                        앞서 제작한 웹 표준 사이트를 기반으로 HTML의 시맨틱태그와 
+                        CSS의 미디어쿼리를 이용하여  다양한 디바이스의 뷰포트에 반응할 
+                        수 있는 사이트이며, 디바이스의 해상도에 따라 이미지를 다르게 보여질 
+                        수 있게 코딩하였습니다.<br> 
+                        또한, 사이트의 생동감을 좀 더 강조하기 위해 스크립트 외에 
+                        마우스오버 효과를 추가하였습니다.
                     </p>
                     <div class="btn-wrap">
                         <a class="link leftBtn blank" href="#"><span>view site</span></a>
@@ -193,16 +193,13 @@
                         <div class="code-align-box">
                             <div class="circlebox">
                                 <a class="allcircle-wrap circle-wrap1 active2" href="#">
-                                    <div class="circle-txt1">view tap-move</div>
+                                    <div class="circle-txt1">view semantic-tag</div>
                                 </a>
                                 <a class="allcircle-wrap circle-wrap2" href="#">
-                                    <div class="circle-txt2">view image-sprite</div>
+                                    <div class="circle-txt2">view mediaquery</div>
                                 </a>
                                 <a class="allcircle-wrap circle-wrap3" href="#">
-                                    <div class="circle-txt3">view slick</div>
-                                </a>
-                                <a class="allcircle-wrap circle-wrap4" href="#">
-                                    <div class="circle-txt4">view lightbox</div>
+                                    <div class="circle-txt3">view hover-effect</div>
                                 </a>
                             </div>
                             <div class="editorbox">
@@ -213,19 +210,19 @@
                                             <li>
                                                 <a class="active" href="#">index.html</a>
                                                 <div class="code-content">
-                                                    <pre class="line-numbers"><code class="language-html lh1"></code></pre>
+                                                    <pre class="line-numbers"><code class="language-html lh2"></code></pre>
                                                 </div>
                                             </li>
                                             <li>
                                                 <a href="#">style.css</a>
                                                 <div class="code-content">
-                                                    <pre class="line-numbers"><code class="language-css lc1"></code></pre>
+                                                    <pre class="line-numbers"><code class="language-css lc2"></code></pre>
                                                 </div>
                                             </li>
                                             <li>
                                                 <a href="#">script.js</a>
                                                 <div class="code-content">
-                                                    <pre class="line-numbers"><code class="language-js lj1"></code></pre>
+                                                    <pre class="line-numbers"><code class="language-js lj2"></code></pre>
                                                 </div>
                                             </li>
                                         </ul>
@@ -294,7 +291,6 @@
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/gsap.min.js"></script>
     <script src="js/prism.js"></script>
-    <script src="js/skrollr.min.js"></script>
     <script src="js/custom3.js"></script>
     <script src="js/luxy.js"></script>
     <!-- <script>
