--- a/port/index5.html
+++ b/port/index5.html
@@ -49,13 +49,13 @@
 
         <section id="section1"> 
             <div class="site-wrap">
-                <h2 class="site-title ftitle t-moveLTR"><span>webstandard</span></h2>
+                <h2 class="site-title ftitle move1"><span>webstandard</span></h2>
                 <div class="img-align-box">
                     <div class="img-wrap reveal-ltr">
-                        <div class="imgframe"></div>
+                        <div class="imgframe move2"></div>
                     </div>
                 </div>
-                <h2 class="site-title btitle t-moveLTR"><span>webstandard</span></h2>
+                <h2 class="site-title btitle move1"><span>webstandard</span></h2>
                 <div class="site-num move3">01</div>
                 <div class="site-desc-wrap move4">
                     <h2 class="desc-title">webstandard</h2>
@@ -164,15 +164,15 @@
 
         <section id="section2"> 
             <div class="site-wrap">
-                <h2 class="site-title ftitle t-moveRTL"><span>responsive</span></h2>
+                <h2 class="site-title ftitle move1"><span>responsive</span></h2>
                 <div class="img-align-box">
-                    <div class="img-wrap reveal-rtl">
-                        <div class="imgframe"></div>
+                    <div class="img-wrap reveal-ltr">
+                        <div class="imgframe move2"></div>
                     </div>
                 </div>
-                <h2 class="site-title btitle t-moveRTL"><span>responsive</span></h2>
+                <h2 class="site-title btitle move1"><span>responsive</span></h2>
                 <div class="site-num move3">02</div>
-                <div class="site-desc-wrap">
+                <div class="site-desc-wrap move4">
                     <h2 class="desc-title">responsive</h2>
                     <p class="desc-desc">
                         앞서 제작한 웹 표준 사이트를 기반으로 HTML의 시맨틱태그와 
