--- a/port/index3.html
+++ b/port/index3.html
@@ -453,7 +453,7 @@
                         </ul>
                     </div>
                     <div class="btn-wrap2">
-                        <a href=https://hyunjin912.github.io/portfolio/pdtime/main.html" target="blank">view site</a>
+                        <a href="https://hyunjin912.github.io/portfolio/pdtime/main.html" target="blank">view site</a>
                         <a href="https://www.figma.com/proto/HOzjg2D8WrXbBsgIaOSUZN/ptdime?node-id=1%3A2&viewport=1811%2C367%2C0.5&scaling=contain" target="blank">view figma</a>
                     </div>
                 </div>
