--- a/port/index5.html
+++ b/port/index5.html
@@ -176,11 +176,9 @@
                     <h2 class="desc-title">responsive</h2>
                     <p class="desc-desc">
                         앞서 제작한 웹 표준 사이트를 기반으로 HTML의 시맨틱태그와 
-                        CSS의 미디어쿼리를 이용하여  다양한 디바이스의 뷰포트에 반응할 
-                        수 있는 사이트이며, 디바이스의 해상도에 따라 이미지를 다르게 보여질 
-                        수 있게 코딩하였습니다.<br> 
-                        또한, 사이트의 생동감을 좀 더 강조하기 위해 스크립트 외에 
-                        마우스오버 효과를 추가하였습니다.
+                        CSS의 미디어쿼리를 이용하여 다양한 디바이스의 뷰포트에 반응할 
+                        수 있는 사이트입니다. 디바이스의 해상도에 따라 이미지를 다르게 보여질 
+                        수 있게 코딩하였고, 사이트의 생동감을 위해 동영상 추가와 css로 마우스오버 효과를 추가하였습니다.
                     </p>
                     <div class="btn-wrap">
                         <a class="link2 leftBtn2 blank2" href="#"><span>view site</span></a>
@@ -388,7 +386,7 @@
             <div class="site-wrap">
                 <h2 class="site-title ftitle move1"><span>ptdime</span></h2>
                 <div class="img-align-box">
-                    <div class="img-wrap reveal-ltr">
+                    <div class="img-wrap reveal-ltr" data-delay="100">
                         <div class="imgframe move2"></div>
                     </div>
                 </div>
