--- a/port/index5.html
+++ b/port/index5.html
@@ -51,7 +51,7 @@
             <div class="site-wrap">
                 <h2 class="site-title ftitle move1"><span>webstandard</span></h2>
                 <div class="img-align-box">
-                    <div class="img-wrap reveal-ltr">
+                    <div class="img-wrap">
                         <div class="imgframe move2"></div>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
             <div class="site-wrap">
                 <h2 class="site-title ftitle move1"><span>responsive</span></h2>
                 <div class="img-align-box">
-                    <div class="img-wrap reveal-ltr">
+                    <div class="img-wrap">
                         <div class="imgframe move2"></div>
                     </div>
                 </div>
@@ -276,7 +276,7 @@
             <div class="site-wrap">
                 <h2 class="site-title ftitle move1"><span>nongshim</span></h2>
                 <div class="img-align-box">
-                    <div class="img-wrap reveal-ltr">
+                    <div class="img-wrap">
                         <div class="imgframe move2"></div>
                     </div>
                 </div>
@@ -386,7 +386,7 @@
             <div class="site-wrap">
                 <h2 class="site-title ftitle move1"><span>ptdime</span></h2>
                 <div class="img-align-box">
-                    <div class="img-wrap reveal-ltr" data-delay="100">
+                    <div class="img-wrap">
                         <div class="imgframe move2"></div>
                     </div>
                 </div>
