--- a/port/test.html
+++ b/port/test.html
@@ -45,6 +45,7 @@
     </div>
 
     <script src="../script/jquery.min_1.12.4.js"></script>
+    <script src="../port/js/gsap.min.js"></script>
     <script>
         $(window).scroll(function(){
             $("span").text($(window).scrollTop())
@@ -60,6 +61,10 @@
                 console.log($(this).offset().top)
             });
         });
+
+
+
+   
     </script>
 </body>
 </html>
